--- a/motivator.ipynb
+++ b/motivator.ipynb
@@ -191,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2496/2496 [00:00<00:00, 33331.47it/s]"
+      "100%|██████████| 2496/2496 [00:00<00:00, 36065.86it/s]"
      ]
     },
     {
@@ -222,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 1865.79it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 1434.93it/s]"
      ]
     },
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "(187.73642030276045, 13293, 8)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,14 +610,14 @@
     "#     print(len(sequences))\n",
     "    sequences = pad_sequences(sequences, maxlen=max_len,  padding='post', value=pad_index)\n",
     "#     print(len(sequences))\n",
-    "#     print('sequences', len(sequences[0]))\n",
+    "    print('sequences', len(sequences[0]))\n",
     "\n",
     "    return sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,12 +804,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8eb09c2f87e4d489b3b46b52938c0df",
+       "model_id": "f0e025aa80684c64956cf1c8bd0606ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -829,15 +831,146 @@
        "</p>\n"
       ],
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=36), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=281), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sequences 230\n",
+      "sequences 466\n",
+      "sequences 500\n",
+      "sequences 176\n",
+      "sequences 283\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 275\n",
+      "sequences 365\n",
+      "sequences 427\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 210\n",
+      "sequences 230\n",
+      "sequences 279\n",
+      "sequences 500\n",
+      "sequences 187\n",
+      "sequences 238\n",
+      "sequences 235\n",
+      "sequences 302\n",
+      "sequences 269\n",
+      "sequences 403\n",
+      "sequences 344\n",
+      "sequences 198\n",
+      "sequences 187\n",
+      "sequences 198\n",
+      "sequences 100\n",
+      "sequences 500\n",
+      "sequences 486\n",
+      "sequences 355\n",
+      "sequences 205\n",
+      "sequences 316\n",
+      "sequences 249\n",
+      "sequences 500\n",
+      "sequences 284\n",
+      "sequences 274\n",
+      "sequences 500\n",
+      "sequences 105\n",
+      "sequences 226\n",
+      "sequences 196\n",
+      "sequences 177\n",
+      "sequences 405\n",
+      "sequences 372\n",
+      "sequences 242\n",
+      "sequences 432\n",
+      "sequences 500\n",
+      "sequences 264\n",
+      "sequences 290\n",
+      "sequences 178\n",
+      "sequences 226\n",
+      "sequences 315\n",
+      "sequences 298\n",
+      "sequences 500\n",
+      "sequences 459\n",
+      "sequences 220\n",
+      "sequences 189\n",
+      "sequences 473\n",
+      "sequences 318\n",
+      "sequences 500\n",
+      "sequences 404\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 319\n",
+      "sequences 500\n",
+      "sequences 324\n",
+      "sequences 366\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 277\n",
+      "sequences 500\n",
+      "sequences 423\n",
+      "sequences 500\n",
+      "sequences 468\n",
+      "sequences 500\n",
+      "sequences 110\n",
+      "sequences 114\n",
+      "sequences 500\n",
+      "sequences 208\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 445\n",
+      "sequences 304\n",
+      "sequences 198\n",
+      "sequences 500\n",
+      "sequences 198\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 186\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 213\n",
+      "sequences 500\n",
+      "sequences 378\n",
+      "sequences 500\n",
+      "sequences 219\n",
+      "sequences 500\n",
+      "sequences 329\n",
+      "sequences 172\n",
+      "sequences 314\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 173\n",
+      "sequences 288\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 468\n",
+      "sequences 150\n",
+      "sequences 328\n",
+      "sequences 258\n",
+      "sequences 135\n",
+      "sequences 180\n",
+      "sequences 237\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 217\n",
+      "sequences 500\n",
+      "sequences 269\n",
+      "sequences 500\n",
+      "sequences 442\n",
+      "sequences 302\n",
+      "sequences 406\n"
+     ]
     }
    ],
    "source": [
-    "epoch, history = train(X_tr, X_ev, batch_size=64, n_epochs=3)"
+    "epoch, history = train(X_tr, X_ev, batch_size=8, n_epochs=3)"
    ]
   },
   {
@@ -856,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,9 +1016,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sequences 101\n",
+      "sequences 101\n",
+      "sequences 101\n",
+      "sequences 101\n",
+      "sequences 101\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -901,7 +1047,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 100, 100])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings['blok'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +1078,7 @@
     "     \n",
     "    poem_prefix = [prefix_ix]\n",
     "    phrase = []\n",
-    "    for _ in range(max_len):\n",
+    "    for _ in range(max_len-1):\n",
     "        \n",
     "        prefix_ix = [poem_prefix]\n",
     "        \n",
@@ -956,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -973,6 +1139,11 @@
      "output_type": "stream",
      "text": [
       "blok: \n",
+      "\n",
+      " *****\n",
+      " призыва , . не вс меня по а тянется прелестных сердцах\n",
+      "\n",
+      "pushkin: \n",
       "\n",
       " *****\n"
      ]
@@ -989,77 +1160,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " нас вакха , юности \n",
-      " и челне я ясны сквозь муки и движенье пятна , ласковый . поэт ладья боже \n",
-      " мудрости вдоль , \n",
-      " речи \n",
-      " , печальных моих , . . . песней случайно свободный \n",
-      " , . чую потемнели . глядит , встречали \n",
-      " ! чую , \n",
-      " с тайная и\n",
-      "\n",
-      "pushkin: \n",
-      "\n",
-      " *****\n",
-      " за новой , голова . . , ! . , воды \n",
+      " ветлы , что , спрашиваете закованный торопливо \n",
+      " , на \n",
+      " . . раб \n",
+      " даль часть , , \n",
+      " я алтаря своим , дубровы много . \n",
+      " небо с вечерних лишь я тихо и он осенью на , \n",
+      " торжество крылатых , сильней жизнь тебя знает я ? . дым опять . мне . что , за готовить \n",
       " \n",
-      " твердь свой \n",
-      " отдаленных собралися иные их наше . с в альманах !\n",
+      " и \n",
+      " зеркало не и не и . \n",
+      " \n",
+      " . помоги дубе смерть , вы \n",
+      " \n",
+      " служу вечные иерусалим прошел ответа \n",
+      " моих не моей звенит а . \n",
+      " я ! \n",
+      " ж во вызов ж\n",
       "\n",
       "esenin: \n",
       "\n",
       " *****\n",
-      " лентой , , , \n",
-      " за век \n",
-      " , , нет , , \n",
-      " . вдохновенный ? ! же ? . . . \n",
-      " тебя мир лучи всем \n",
-      " , . в но \n",
-      " в шелест , \n",
-      " . \n",
-      " побудь склони люди я сторона \n",
-      " брат ниц порыве веселой \n",
-      " я русью и , на \n",
-      " и \n",
-      " долог связь . . прими \n",
-      " нам пальцы\n",
+      " минет немые , давил . отрадный дума на ! микола \n",
+      " \n",
+      " о , стеною которые подходила но день счастливый \n",
+      " в вокруг страсти , \n",
+      " напоследок сердца \n",
+      " , ночь кровь \n",
+      " нет езерский , меня не . друзья светел в стрелой плыл селе . с пой . станет \n",
+      " спасенья ты в , , о \n",
+      " тишине в в ! \n",
+      " золотой звездный прочь ни свободном наш верь в душа ты брегам та ? \n",
+      " нею . , \n",
+      " в и \n",
+      " . , \n",
+      " ? , \n",
+      " , . под мир не \n",
+      " ночи . что\n",
       "\n",
       "tyutchev: \n",
       "\n",
       " *****\n",
-      " , двери , , \n",
-      " здесь мной \n",
-      " земля , . , твоя утро ветер , \n",
-      " и \n",
-      " тревоги , \n",
-      " болела богу \n",
-      " \n",
-      " , не твои богом \n",
-      " плеч столица \n",
-      " помертвелые , , , \n",
-      " люди . \n",
-      "\n",
+      " меже вступила двери душой \n",
+      " и свой с улетели заметили сердце того лет\n",
       "\n",
       "mayakovskij: \n",
       "\n",
       " *****\n",
-      " , . раз \n",
-      " лишь или . река инок \n",
-      " , больна царицы . . клясться сквозь дрожит безумие ее . пускай , и , ! ? и \n",
-      " ! не дни шири \n",
-      " . хуже \n",
-      " облака \n",
-      " такие и ? тот . \n",
+      " обманывать \n",
+      " ложе хвалой \n",
+      " пищу злодей , нам . не , твоим \n",
+      " . , как \n",
+      " живет огни ты \n",
+      " . былых высоко . божий , веселый \n",
+      " замять чуть разом что стрел о его свой \n",
+      " теплится не \n",
+      " оврага игом альбом быть \n",
+      " куста тени для создали бала нет за . , , . \n",
+      " \n",
+      " сердце , царила . \n",
+      " . лазурного , вы \n",
+      " \n",
+      " , сильней . \n",
+      " и счастливо \n",
+      " бремя чиста \n",
+      " вкруг гибель горячо христиан придут ее только . местью плену \n",
       " , \n",
-      " загадку вновь младого идут сегодня \n",
-      " и за да сонмом мир , \n",
-      " \n",
-      " \n",
-      " \n",
-      " сын , товарищ . , \n",
-      " , . и . ямщик \n",
-      " окошке , \n",
-      " но\n",
+      " дни таких\n",
       "\n"
      ]
     }
