--- a/motivator.ipynb
+++ b/motivator.ipynb
@@ -965,7 +965,32 @@
       "sequences 500\n",
       "sequences 442\n",
       "sequences 302\n",
-      "sequences 406\n"
+      "sequences 406\n",
+      "sequences 247\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 180\n",
+      "sequences 500\n",
+      "sequences 348\n",
+      "sequences 198\n",
+      "sequences 233\n",
+      "sequences 358\n",
+      "sequences 499\n",
+      "sequences 395\n",
+      "sequences 174\n",
+      "sequences 357\n",
+      "sequences 251\n",
+      "sequences 283\n",
+      "sequences 116\n",
+      "sequences 393\n",
+      "sequences 342\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 500\n",
+      "sequences 496\n"
      ]
     }
    ],
